# ackermann_trajectory_control

./: .env  .gitlab-ci.yml  .repos  AckermannTrajectoryControlNode_8cpp.html  AckermannTrajectoryControlNode_8cpp.js  AckermannTrajectoryControlNode_8cpp_source.html  AckermannTrajectoryControlNode_8hpp.html  AckermannTrajectoryControlNode_8hpp.js  AckermannTrajectoryControlNode_8hpp_source.html  CMakeLists.txt  LICENSE  PID_8cpp.html  PID_8cpp_source.html  PID_8hpp.html  PID_8hpp.js  PID_8hpp_source.html  README.md  README_8md.html  annotated.html  annotated_dup.js  classAckermannTrajectoryControl-members.html  classAckermannTrajectoryControl.html  classAckermannTrajectoryControl.js  classPID-members.html  classPID.html  classPID.js  classes.html  dir_0bcfc8f98986a1b62bc5fa9412b53977.html  dir_0bcfc8f98986a1b62bc5fa9412b53977.js  dir_51f9d8827965eee4651e05ba591dd72f.html  dir_51f9d8827965eee4651e05ba591dd72f.js  dir_52f149e5208d7c5810f5f700cfa593b3.html  dir_52f149e5208d7c5810f5f700cfa593b3.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  (+20 more)
.github/workflows/: docker-ros.yml
ackermann_trajectory_control/: CMakeLists.txt  README.md  package.xml
ackermann_trajectory_control/config/: example-limits.csv  lateral-limits-v2.CSV  params.yml
ackermann_trajectory_control/include/: AckermannTrajectoryControlNode.hpp  PID.hpp
ackermann_trajectory_control/launch/: ackermann_trajectory_control.launch.py
ackermann_trajectory_control/src/: AckermannTrajectoryControlNode.cpp  PID.cpp
config/: params.yml
docker/: before_dependency_identification.sh  before_dependency_installation.sh  custom.sh
docker/compose/: docker-compose.yml
include/: AckermannTrajectoryControlNode.hpp  PID.hpp  TrajectoryControlNode.hpp
launch/: ackermann_trajectory_control.launch.py  ackermann_trajectory_control_node.launch.py  trajectory_control_node.launch.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  searchdata.js  (+14 more)
src/: AckermannTrajectoryControlNode.cpp  PID.cpp  TrajectoryControlNode.cpp
