<?xml version="1.0"?>
<package format="3">
  <name>ackermann_trajectory_control</name>
  <version>1.0.0</version>
  <description>Receives a planning_interfaces-Trajectory and generates the specific ackermann controls</description>

  <maintainer email="guido.kueppers@rwth-aachen.de">Guido Küppers</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ackermann_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>perception_msgs_utils</depend>
  <depend>perception_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_trajectory_planning_msgs</depend>
  <depend>tf2</depend>
  <depend>trajectory_planning_msgs_utils</depend>
  <depend>trajectory_planning_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>