<?xml version="1.0"?>
<package format="3">
  <name>ackermann_trajectory_control</name>
  <version>1.3.0</version>
  <description>Controls actuator interfaces to follow a trajectory</description>

  <author email="guido.linden@rwth-aachen.de">Guido Linden</author>
  <maintainer email="guido.linden@rwth-aachen.de">Guido Linden</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ackermann_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>perception_msgs_utils</depend>
  <depend>perception_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_trajectory_planning_msgs</depend>
  <depend>tf2</depend>
  <depend>tracetools</depend>
  <depend>trajectory_planning_msgs_utils</depend>
  <depend>trajectory_planning_msgs</depend>

  <exec_depend>tracetools_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>