<?xml version="1.0"?>
<package format="3">
  <name>ackermann_trajectory_control</name>
  <version>1.3.0</version>
  <description>This package contains a trajectory controller for Ackermann-steered vehicles. It is implemented as a ROS 2 C++ node that subscribes to trajectory_planning_msgs/Trajectory and publishes control commands as ackermann_msgs/AckermannDriveStamped.</description>

  <maintainer email="guido.linden@rwth-aachen.de">Guido Linden</maintainer>
  <author email="guido.linden@rwth-aachen.de">Guido Linden</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ackermann_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>perception_msgs_utils</depend>
  <depend>perception_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_trajectory_planning_msgs</depend>
  <depend>tf2</depend>
  <depend>tracetools</depend>
  <depend>trajectory_planning_msgs_utils</depend>
  <depend>trajectory_planning_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>

  <exec_depend>tracetools_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
